# riscv-process-py

./: .gitignore  README.md  pyproject.toml
llvm_runner/: caller.py  const.py  main.py  reader.py
riscv_process_py/: __init__.py  __main__.py  asm_define.py  common.py  instruction.py  load.py  load_asm.py  load_pseudocode.py  preprocesses.py
riscv_process_py/example/: bzip2-O0.ll  bzip2-O0.s  bzip2-O2.ll  bzip2-O2.s
riscv_process_py/llvm_runner/data/: const.py
